# notification_backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
apps/notifications/: apps.py  choices.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/service/: __init__.py  base_service.py  email.py  notification_service.py  sms.py  telegram.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
notification/: celery.py  env_variables.py  settings.py  urls.py
